# mnemosyne

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/claude_session_export/: __main__.py  cli.py  formats.py  installer.py  mcp_server.py  parser.py  render.py
src/claude_session_export/plugin_assets/: .mcp.json
src/claude_session_export/plugin_assets/.claude-plugin/: marketplace.json  plugin.json
src/claude_session_export/plugin_assets/commands/: export.md  recall.md  summon.md
src/claude_session_export/plugin_assets/skills/session-history/: SKILL.md
src/mnemosyne/: __init__.py  __main__.py  cli.py  config.py  formats.py  installer.py  mcp_server.py  render.py
src/mnemosyne/plugin_assets/commands/: export.md  history.md
src/mnemosyne/plugin_assets/hooks/: hooks.json
tests/: test_anchors.py  test_cli_helpers.py  test_config.py  test_formats.py  test_installer.py  test_mcp_server.py  test_parser.py  test_render.py
